# Arcade-Game-Engine

./: .gitignore  Arcade Game Engine.sln  Arcade Game Engine.vcxproj  Arcade Game Engine.vcxproj.filters  CMakeLists.txt  LICENSE  README.md  TODO.md
Arcade Game Engine.xcodeproj/: project.pbxproj
Arcade Game Engine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Arcade Game Engine.xcodeproj/project.xcworkspace/xcuserdata/lidin.xcuserdatad/: UserInterfaceState.xcuserstate
Arcade Game Engine.xcodeproj/xcuserdata/lidin.xcuserdatad/xcschemes/: Q*bert.xcscheme  xcschememanagement.plist
Arcade Game Engine/Q*bert/: Block.cpp  Block.hpp  Board.cpp  Board.hpp  Controller.cpp  Controller.hpp  Enemy.cpp  Enemy.hpp  HUD.cpp  HUD.hpp  Level.cpp  Player.cpp  Player.hpp  Ugg.cpp  Wrongway.cpp  Wrongway.hpp  main.cpp
Arcade Game Engine/Q*bert/animations/: jump_down.anim  jump_left.anim  jump_right.anim  jump_up.anim
Arcade Game Engine/demo/: main.cpp
Arcade Game Engine/engine/: DetectionBox.cpp  DetectionBox.hpp  animation.cpp  audio.cpp  core.cpp  core.hpp  physics.cpp  physics.hpp  types.cpp  types.hpp
Arcade Game Engine/qbert/: Board.cpp  Board.hpp  Character.cpp  Character.hpp  Controller.cpp  Controller.hpp  HUD.cpp  HUD.hpp  Level.hpp  Player.cpp  Player.hpp  Ugg.cpp  Ugg.hpp  Wrongway.cpp  Wrongway.hpp  main.cpp
Arcade Game Engine/qbert/textures/: ATTRIBUTE
config/: engineConfig.h.in
data/materials/: desert.mtl
data/shaders/: default.frag  deferred_geometry.frag  deferred_geometry.vert  particles.frag  particles.vert  post_motion_blur.frag  post_output.frag
demo/: main.cpp
demo_src/: main.cpp
engine/: animation.cpp  audio.cpp  core.cpp  core.hpp  entity.cpp  graphics.cpp  particles.cpp  physics.cpp  types.cpp  types.hpp
include/: core.hpp
materials/: sphere.mtl
shaders/: PVM.vert  default.frag  default.vert  deferred_ambient.frag  deferred_geometry.frag  deferred_geometry.vert  deferred_lighting.frag  deferred_lighting.vert  motion_blur.frag  motion_blur.vert  particles.frag  particles.vert  post_motion_blur.frag  post_output.frag  quad.vert  simple.frag  simple.vert
src/: animation.cpp  audio.cpp  core.cpp  main.cpp  particles.cpp  physics.cpp
synthesizer/: alien_gibberish.synth  fall_off.synth  gibberish.synth  land.synth
